--- a/Teachent/templates/login needs fix.html
+++ b/Teachent/templates/login needs fix.html
@@ -45,34 +45,35 @@
 <div class="limiter col-md-12">
     <div class="container-login100">
         <div class="wrap-login100">
-            <form action="" method="post">
-                {{ form.hidden_tag() }}
-                <span class="login100-form-title p-b-26">
+            <form class="login100-form validate-form">
+					<span class="login100-form-title p-b-26">
 						Teachent
 					</span>
                 <!--        <span class="login100-form-title p-b-48">
                                 <i class="zmdi zmdi-font"></i>
                             </span>
         -->
-                <div>
+                <div class="wrap-input100 validate-input">
+
                     {{ form.username(size =50 ,placeholder="شناسه کاربری", class_="input100 myFont") }}
+
                     <span class="focus-input100 myFont"></span>
                 </div>
 
-                <div class="wrap-input100 validate-input" data-validate="Enter password">
+                <div class="wrap-input100 validate-input">
 						<span class="btn-show-pass">
 							<i class="zmdi zmdi-eye"></i>
 						</span>
                     {{ form.password(size=50,placeholder="رمز عبور", class_="input100 myFont") }}
+
+
                     <span class="focus-input100 myFont"></span>
                 </div>
-                <div> {{ render_field(form.remember_me) }}</div>
-
 
                 <div class="container-login100-form-btn">
                     <div class="wrap-login100-form-btn">
                         <div class="login100-form-bgbtn"></div>
-                        <button class="login100-form-btn myFont">
+                        <button type="submit" class="login100-form-btn myFont">
                             ورود
                         </button>
                     </div>
@@ -83,7 +84,7 @@
 							حساب کاربری ندارید؟😱
 						</span>
 
-                    <a class="txt2 r myFont" href="{{ url_for('signup') }}">
+                    <a class="txt2 r myFont" href="#">
                         عضویت
                     </a>
                     <br>
