SignUp Feature Extended to 2 kind of Users. ToDO: #1.SignUp template needs to be initialized by jinja. #2.LogUser class needs to be re-initialized.

--- a/Teachent/templates/signup.html
+++ b/Teachent/templates/signup.html
@@ -61,7 +61,7 @@
                     <span class="focus-input100 myFont"></span>
                 </div>
                  <div>
-                    {{ form.email(size =50 ,placeholder="ایمیل", class_="input100 myFont") }}
+                    {{ form.email(size =50 ,type="checkbox",placeholder="ایمیل", class_="input100 myFont") }}
                     <span class="focus-input100 myFont"></span>
                 </div>
 
