--- a/Teachent/templates/login.html
+++ b/Teachent/templates/login.html
@@ -66,7 +66,7 @@
                     {{ form.password(size=50,placeholder="رمز عبور", class_="input100 myFont") }}
                     <span class="focus-input100 myFont"></span>
                 </div>
-                <div> {{ render_field(form.remember_me) }}</div>
+                <div> {{ render_field(form.remember)}}</div>
 
 
                 <div class="container-login100-form-btn">
